--- a/src/Velocity.Frontend/Pages/Purchase/PurchaseInvoice/SelectPurchaseOrderDialog.razor
+++ b/src/Velocity.Frontend/Pages/Purchase/PurchaseInvoice/SelectPurchaseOrderDialog.razor
@@ -1,11 +1,12 @@
 ﻿@using Velocity.Shared.Responses.PurchaseOrders
 @using Velocity.Frontend.Services.HttpClients
+@using Velocity.Shared.Enums
 @using Velocity.Shared.Requests.PurchaseOrders
 @inject PurchaseOrderHttpClient PurchaseOrderHttpClient
 
 <MudDialog>
     <TitleContent>
-        <MudText Typo="Typo.h6"><MudIcon Icon="@Icons.Material.Filled.Add" Class="me-3 mb-n1 ms-n1"/>New Purchase Invoice Item</MudText>
+        <MudText Typo="Typo.h6"><MudIcon Icon="@Icons.Material.Filled.Search" Class="me-3 mb-n1 ms-n1"/>Select Purchase Order for Invoice</MudText>
     </TitleContent>
     <DialogContent>
         <MudGrid Spacing="1" Class="my-n2">
@@ -50,6 +51,7 @@
                 PageNumber = 1,
                 PageSize = 5,
                 SearchString = value,
+                Status = PurchaseOrderStatus.Placed
             }, cancellationToken);
             if(result.Succeeded)
             {
