Complete PurchaseInvoice PDF printing

--- a/src/Velocity.Frontend/Shared/Layouts/MainLayout.razor
+++ b/src/Velocity.Frontend/Shared/Layouts/MainLayout.razor
@@ -29,7 +29,7 @@
                     </ChildContent>
                 </MudMenu>
                 <MudButton Href="/sales-invoices" Class="mx-1" Color="Color.Inherit" Variant="Variant.Text">Sales Invoices</MudButton>
-                <MudButton Href="/reports" Class="mx-1" Color="Color.Inherit" Variant="Variant.Text">Reports</MudButton>
+                @* <MudButton Href="/reports" Class="mx-1" Color="Color.Inherit" Variant="Variant.Text">Reports</MudButton> *@
             </MudHidden>
             <MudSpacer />
             <MudTooltip Text="Toggle light/dark theme">
@@ -51,7 +51,7 @@
                         <MudListItem Href="/purchase-orders">Purchase Orders</MudListItem>
                         <MudListItem Href="/purchase-invoices">Purchase Invoices</MudListItem>
                         <MudListItem Href="/sales-invoices">Sales Invoices</MudListItem>
-                        <MudListItem Href="/reports">Reports</MudListItem>
+                        @* <MudListItem Href="/reports">Reports</MudListItem> *@
                         <MudDivider />
                         <MudListItem Dense="true" Icon="@Icons.Material.Filled.Help" OnClick="@AboutUs">About Us</MudListItem>
                     </MudList>
